update alpine to 3.10 CI/CD versions

--- a/source/minetest.conf
+++ b/source/minetest.conf
@@ -23,3 +23,6 @@ year_days = 30
 server_map_save_interval = 5.3
 sqlite_synchronous = 1
 dedicated_server_step = 0.1
+player_transfer_distance = 0
+server_unload_unused_data_timeout = 180
+liquid_update = 0.25
