--- a/rootfs/minetest/etc/default.conf
+++ b/rootfs/minetest/etc/default.conf
@@ -1,10 +1,12 @@
+server_name = Docker Minetest server_announce
+server_description = Minetest server running in docker
+motd = Docker Minetest
 map-dir = /minetest/worlds/default
 name = minetest
 port = 30000
 server_announce = false
 ipv6_server = false
 default_game = minetest
-motd = Docker Minetest
 max_users = 100
 enable_pvp = false
 creative_mode = true
@@ -12,8 +14,9 @@ enable_damage = false
 default_privs = interact, shout, home, creative
 only_peaceful_mobs = true
 give_initial_stuff = false
+disallow_empty_password = true
 enable_rollback_recording = true
-max_simultaneous_block_sends_per_client = 10
+max_simultaneos_block_sends_per_client = 100
 max_simultaneous_block_sends_server_total = 10000
 max_block_send_distance = 8
 max_block_generate_distance = 6
@@ -26,3 +29,5 @@ dedicated_server_step = 0.1
 player_transfer_distance = 0
 server_unload_unused_data_timeout = 180
 liquid_update = 0.25
+debug_log_level = error
+deprecated_lua_api_handling = legacy
